try to fix ring image hidden with overflow-x

--- a/src/App.scss
+++ b/src/App.scss
@@ -210,12 +210,11 @@ body {
     position: absolute;
     top: 5rem;
     right: -4.5rem;
-    z-index: 0;
+    z-index: 1;
 
     @include media-min(768px) {
       right: -4.6rem;
       top: 10.7rem;
-      z-index: 2;
     }
   }
 }
